app-in-apps/yaml/nocodb/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nocodb
  namespace: nocodb
  labels:
    app: nocodb
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: nocodb
  template:
    metadata:
      labels:
        app: nocodb
    spec:
      containers:
        - name: nocodb
          image: nocodb/nocodb:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/app/data/
              name: nocodb-data
      volumes:
        - name: nocodb-data
          persistentVolumeClaim:
            claimName: nocodb-data-pvc
