app-in-apps/yaml/nocodb/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nocodb-service
  labels:
    app: nocodb
  namespace: nocodb
spec:
  selector:
    app: nocodb
  ports:
    - name: ui
      port: 8080
      protocol: TCP
      targetPort: http
  type: ClusterIP
