app-in-apps/yaml/nocodb/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nocodb-ingress
  namespace: nocodb
  labels:
    app: nocodb
  annotations:
    kubernetes.io/ingress.class: haproxy
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  ingressClassName: haproxy
  rules:
    - host: nocodb.nexus-core.org
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: nocodb-service
                port:
                  name: ui
  tls:
    - hosts:
        - nocodb.nexus-core.org
